--- a/GTA123.md
+++ b/GTA123.md
@@ -32,7 +32,7 @@ The rest was quickly solved with the help of the agent, and I thought the last p
 
 ## Appendix: AI investigation log
 
-The complete AI interaction log is included here, showing how the trail unfolded and where the final clues appeared:
+The AI interaction log from the final moments is included here, showing how the trail unfolded and where the final clues appeared:
 
 ```plaintext
 Djacob-no: in the KEYFINDINGS folder i have gathered some crash logs that are from a keylogger software called rottas I have an infected computers image mounted to my D: drive. i want you to analyse the logs in key findings and see what you can gather. 
